@@ -4,6 +4,8 @@
 2. Do some housekeeping with the startup and finish debugging to make the 
    order of messaging more logical. Also disable some messaging caused by 
    other errors/circumstances causing various object handles disappearing.  
+3. Make sure that $mycall and $myalias are upper case (and moan about it if
+   they aren't.
 10Mar23=======================================================================
 1. I am aware that there are windows nodes out there on mojo (brave, impetuous 
    that you are) and wget is not an easy option to download badip files. So, 
